--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "minimum-stability": "dev",
     "require": {
         "laravel/framework": "^9",
-        "mabrouk/translatable": "^1",
-        "mabrouk/filterable": "dev-master"
+        "mabrouk/translatable": "^1.0",
+        "mabrouk/filterable": "^1.0"
     },
     "require-dev": {
         "orchestra/testbench": "^7.0@dev"
