--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
         "laravel/framework": "^9.19",
         "mabrouk/translatable": "^1.0",
-        "mabrouk/filterable": "^1.0"
+        "mabrouk/filterable": "^1.0",
+        "mabrouk/mediable": "dev-master"
     },
     "require-dev": {
         "orchestra/testbench": "^7.0@dev"
