--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/framework": "^9.19",
         "mabrouk/translatable": "^1.0",
         "mabrouk/filterable": "^1.0",
-        "mabrouk/mediable": "dev-master"
+        "mabrouk/mediable": "^3"
     },
     "require-dev": {
         "orchestra/testbench": "^7.0@dev"
